@@ -17,16 +17,24 @@
  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
+#ifdef SF_HAS_FFTW
+#include <fftw3.h>
+#endif
+
 #include "alloc.h"
 #include "kiss_fftr.h"
-
 #include "cosft.h"
 #include "komplex.h"
 
 static int nt, nw, n1;
 static float *p /* , dt */;
 static kiss_fft_cpx *pp;
+
+#ifdef SF_HAS_FFTW
+static fftwf_plan cfg, icfg;
+#else
 static kiss_fftr_cfg forw, invs;
+#endif
 
 void sf_cosft_init(int n1_in)
 /*< initialize >*/ 
@@ -36,8 +44,16 @@ void sf_cosft_init(int n1_in)
     nw = nt/2+1;
     p  = sf_floatalloc (nt);
     pp = (kiss_fft_cpx*) sf_complexalloc(nw);
+
+#ifdef SF_HAS_FFTW
+    cfg = fftwf_plan_dft_r2c_1d(nt, p, (fftwf_complex *) pp,
+				FFTW_ESTIMATE);
+    icfg = fftwf_plan_dft_c2r_1d(nt, (fftwf_complex *) pp, p,
+				 FFTW_ESTIMATE);
+#else
     forw = kiss_fftr_alloc(nt,0,NULL,NULL);
     invs = kiss_fftr_alloc(nt,1,NULL,NULL);
+#endif
 }
 
 void sf_cosft_close(void) 
@@ -45,8 +61,13 @@ void sf_cosft_close(void)
 {
     free (p);
     free (pp);
+#ifdef SF_HAS_FFTW
+    fftwf_destroy_plan(cfg);
+    fftwf_destroy_plan(icfg);
+#else
     free (forw);
     free (invs);
+#endif
 }
 
 void sf_cosft_frw (float *q /* data */, 
@@ -65,8 +86,12 @@ void sf_cosft_frw (float *q /* data */,
     for (i=nw; i < nt; i++) {
 		p[i] = p[nt-i];
     }
-    
+
+#ifdef SF_HAS_FFTW   
+    fftwf_execute(cfg);
+#else
     kiss_fftr(forw, p, pp);
+#endif
     
     for (i=0; i < n1; i++) {
 		q[o1+i*d1] = sf_crealf(pp[i]);
@@ -90,8 +115,12 @@ void sf_cosft_inv (float *q /* data */,
 		pp[i].r = 0.; 
 		pp[i].i = 0.;
     }
-	
+
+#ifdef SF_HAS_FFTW   
+    fftwf_execute(icfg);
+#else
     kiss_fftri(invs,pp,p);
+#endif
     
     for (i=0; i < n1; i++) {
 		q[o1+i*d1] = p[i]/nt;
