@@ -5,7 +5,6 @@ try:
     glob_build = True # scons command launched in RSFSRC
     srcroot = '../..' # cwd is RSFSRC/build/user/ivlad
     Import('env bindir libdir pkgdir')
-    env = env.Clone()
 except:
     glob_build = False # scons command launched in the local directory
     srcroot = os.environ.get('RSFSRC', '../..')
@@ -13,7 +12,7 @@ except:
     import bldutil
     env = bldutil.Debug() # Debugging flags for compilers
     bindir = libdir = pkgdir = None
-    
+
 targets = bldutil.UserSconsTargets()
 
 # C mains
