@@ -1,8 +1,6 @@
 import os, sys, re, string
 sys.path.append('../../framework')
 
-
-
 try:
     import bldutil
     glob_build = True # scons command launched in RSFSRC
