@@ -1,14 +1,11 @@
 import os, sys, re, string
 sys.path.append('../../framework')
 
-
-
 try:
     import bldutil
     glob_build = True # scons command launched in RSFSRC
     srcroot = '../..' # cwd is RSFSRC/build/user/jeff
     Import('env bindir libdir pkgdir')
-    env = env.Clone()
 except:
     glob_build = False # scons command launched in the local directory
     srcroot = os.environ.get('RSFSRC', '../..')
