@@ -44,6 +44,10 @@ env.Prepend(CPPPATH=['../../include'],
             LIBPATH=['../../lib'],
             LIBS=[env.get('DYNLIB','')+'rsf'])
 
+fftw = env.get('FFTW')
+if fftw and not isinstance(fftw,bool):
+        env.Prepend(LIBS=[fftw])
+
 for source in src:
     inc = env.RSF_Include(source,prefix='')
     obj = env.StaticObject(source)
